--- a/src/app/components/modal-nota-v/modal-nota-v.component.html
+++ b/src/app/components/modal-nota-v/modal-nota-v.component.html
@@ -111,17 +111,17 @@
 </nav>
  <!---->
  
-<div class="entrada">
+<!-- <div class="entrada">
   <div id="fecha">
   <label for="usuario"  class="form-label">Vendedor</label>
- <!-- <div formArrayName="detalle">-->
-  <select > <!--[(ngModel)]="cuenta.usuario" name="usuario"-->
-    <option >--Seleccionar un Vendedor</option> <!--[ngValue]="undefined"-->
-    <option *ngFor="let usuario of usuarios" [ngValue]="usuario">{{usuario.nombres}}</option>
-  </select>
-<!--</div>-->
-  </div> 
-</div>
+
+  <select > 
+    <option >--Seleccionar un Vendedor</option> 
+     <option *ngFor="let usuario of usuarios" [ngValue]="usuario">{{usuario.nombres}}</option> -->
+  <!-- </select> -->
+
+  <!-- </div>  -->
+<!-- </div>  -->
 
 <!-- <div class="botones">
   <a class="btn btn-outline-danger" (click)="openSM(contenido)"> 
