--- a/src/app/components/reservas/reservas.component.html
+++ b/src/app/components/reservas/reservas.component.html
@@ -110,24 +110,14 @@ justify-content: space-evenly;
         </a>  
     </nav>
 
-    <div class="botones">
+    <!-- <div class="botones">
         <a class="btn btn-outline-danger" (click)="openSM(contenido)"> 
           <i class="bi bi-search"></i>
           Agregar Producto
         </a>
-      </div>
+      </div> -->
       
-    <div class="entrada">
-        <div id="fecha">
-        <label for="usuario"  class="form-label">VENDEDOR</label>
-       <!-- <div formArrayName="detalle">-->
-        <select name="usuario">
-          <option >--Seleccionar un Vendedor</option>
-          <option >usuario.nombres</option>
-        </select>
-      <!--</div>-->
-        </div> 
-    </div>
+
 
     <form class="row g-3">
         <div class="col-md-6">
