--- a/src/app/components/nota-venta/nota-venta.component.html
+++ b/src/app/components/nota-venta/nota-venta.component.html
@@ -56,15 +56,10 @@ table #botones{
 
 .botonEditar a{     
      border: 2px burlywood solid;
-     margin-left: 60px;
+     margin-left: 10px;
      margin-top: 0px;
            
    }
-   .botonEliminar a{   
-     border: 2px red solid;
-     margin-right: 40px;
-      margin-top: -66px;
-}
 a:hover{
   background-color: rgb(208, 207, 197);
  }
@@ -107,7 +102,7 @@ a:hover{
                       <th scope="col">Fecha</th>
                       <th scope="col">Vendedor</th>
                       <th scope="col">Total</th>
-                      <th scope="col">Acciones</th>
+                      <th scope="col">Ver</th>
                     </tr>
                   </thead>
                   <tbody>
@@ -119,12 +114,7 @@ a:hover{
                       <td id="botones">
                         <div class="botonEditar">
                             <a class="btn btn-default" type="button">
-                              <i class="bi bi-pencil-square"></i>
-                            </a>
-                          </div>
-                          <div class="botonEliminar">
-                            <a class="btn btn-default" type="button">
-                              <i class="bi bi-trash-fill"></i>
+                              <i class="bi bi-eye-fill"></i>
                             </a>
                           </div>
                       </td>
