--- a/src/app/components/libro/libro.component.html
+++ b/src/app/components/libro/libro.component.html
@@ -87,7 +87,8 @@ a:hover{
               <table class="table">
               <thead>
                 <tr>
-                  <th scope="col">#</th>
+                  <!-- <th scope="col">#</th> -->
+                  <th scope="col">Imágen</th>
                   <th scope="col">ISBN</th>
                   <th scope="col">Titulo</th>
                   <th scope="col">Autor</th>                
@@ -100,12 +101,13 @@ a:hover{
               </thead>
               <tbody>               
                 <tr *ngFor="let lib of libros | paginate: { itemsPerPage: 5, currentPage: page };let i=index ">
-                  <th scope="row">{{i+1}}</th>
+                  <!-- <th scope="row">{{i+1}}</th> -->
+                  <td style="width: 64px;"><img  src="{{lib.imagen.imagenUrl}}"  class="img-thumbnail rounded"></td>
                   <td>{{lib.isbn}}</td>
                   <td>{{lib.titulo}}</td>
                   <td *ngFor="let au of lib.autores">{{au.nombre}}</td>                
                   <td>{{lib.stock}}</td>
-                  <td>{{lib.precioUnitario}}</td>
+                  <td>${{lib.precioUnitario.toFixed(2)}}</td>
                   <td *ngFor="let ge of lib.generos">{{ge.nombre}}</td>    
                   <td *ngFor="let ed of lib.editoriales">{{ed.nombre}}</td>                     
                   <td id="botones">
