--- a/src/app/components/libroform/libroform.component.html
+++ b/src/app/components/libroform/libroform.component.html
@@ -123,7 +123,33 @@
           <h1>REGISTRO</h1>
           <div class="content"> 
 
-          <form class="col-8"[formGroup]="Miformulario"(submit)="onSubmit(Miformulario.value)"><!-- -->
+            <ngx-spinner
+              bdColor="rgba(51,51,51,0.8)"
+              size="medium"
+              color="#fff"
+              type="ball-scale-multiple"
+            >
+              <p style="font-size: 20px; color: white">Loading Imagen...</p>
+            </ngx-spinner>
+            <!-- (ngSubmit)="onUpload()" -->
+          <form class="col-8"[formGroup]="Miformulario"(ngSubmit)="onSubmit(Miformulario.value)"  novalidate enctype="multipart/form-data"><!-- -->
+            <div class="input-group">
+              <input   type="file" class="form-control" id="imagen" aria-describedby="inputGroupFileAddon04" aria-label="Upload" #imagenInputFile
+              (change)="onFileChange($event)" accept="image/png, image/jpeg, image/gif">
+              <!-- <button class="btn btn-outline-secondary" type="button" id="Imagen">Button</button> -->
+            </div>
+            <div *ngIf="imagen" class="mt-5">
+              <h5>Vista Previa:</h5>
+              <div>
+                <img class="image-thumbnail" style="max-width: 100px;" [src]="imagenMin" >
+              </div>
+            </div>
+            <div class="form-group d-flex justify-content-between">
+              <!-- <button type="submit" class="btn btn-outline-success" [disabled]="!imagen"><i class="bi bi-upload"></i> Subir</button> -->
+              <button  class="btn btn-outline-danger" [disabled]="!imagen" (click)="reset()"><i class="bi bi-arrow-clockwise"></i>Reset</button>
+            </div>
+            
+            
             <div class="mb-3">
               <label for="isbn" class="form-label">ISBN</label>
               <input type="text" class="form-control" id="isbn" formControlName="isbn">
