--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -164,7 +164,7 @@
             {{userloginService.cuenta.email}}
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Mi Perfil</a></li>
+            <li><a class="dropdown-item" [routerLink]="['/registroUsuarios',userloginService.cuenta.idCuenta]">Mi Perfil</a></li>
             <li><a class="dropdown-item" (click)="logout()">Logout</a></li>
             </ul>
         </li>
