--- a/src/app/components/user-login/user-login.component.html
+++ b/src/app/components/user-login/user-login.component.html
@@ -10,6 +10,7 @@ h1 {
   margin: 0;
   padding: 0;
   text-align: center;
+  font-weight: bold;
 }
 .custom-form {
   min-width: 300px;
@@ -43,7 +44,7 @@ h1 {
   font-size: 0.875rem;
   color: #ffffff;
   font-weight: bold;
-  background-color: #bcd8c1;
+  background-color: #0f375a;
   width: 100%;
   display: block;
   padding: 0.875rem 1rem;
